examples/fail/parser/top_level_statement.bina
// EXPECT_PARSER_ERROR: expected top-level declaration
let x = 1;

fn main() -> int {
    return 0;
}
